# golinks

./: LICENSE  README.md  pyproject.toml
src/: manage.py
src/go/: apps.py  models.py  urls.py  views.py
src/go/migrations/: 0001_initial.py  0002_golink_hit_count.py
src/go/templates/go/: create.html  index.html
src/golinks/: asgi.py  settings.py  urls.py  wsgi.py
